ortho, merci midnite

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	        Fonctionnel
               </td>
               <td class=is >
-                Communication, et pas casser
+                Communication, et pas casser ;
               </td>
            <tr >
               <td class=field >
@@ -83,9 +83,9 @@
         Analyse et développement orienté web pour les parties frontales et métiers d'une solution client de voix sur IP.
        </p>
        <ul>
-           <li>technologie web: uwsgi, pylons;  </li>
-           <li>zero mq pour utilisation dans un système distribué; </li>
-           <li>packaging d'applications debian, et python (distutils);</li>
+           <li>technologie web: uwsgi, pylons ;  </li>
+           <li>zero mq pour utilisation dans un système distribué ; </li>
+           <li>packaging d'applications debian, et python (distutils) ;</li>
        </ul>
 
         <table>
@@ -102,7 +102,7 @@
                 Fonctionnel
               </td>
               <td class=is >
-                VoIP, Développement, documentation, R&amp;D, SIP
+                VoIP, développement, documentation, R&amp;D, SIP
               </td>
            <tr >
               <td class=field >
@@ -123,12 +123,13 @@
        Produits basés sur des technologies python :
        </p>
        <ul>
-           <li>technologie web: flask, pyramid, turbogears, django;  </li>
-           <li>LDAP et role base accounting;</li>
-           <li>utilisation des méthodes agiles; </li>
-           <li>zero mq pour utilisation dans un système distribué; </li>
-           <li>packaging d'applications centOS, et python (distutils);</li>
-           <li>documentation d'architecture conformément à ISO2700X (risk assessment, Access Control...) </li>
+           <li>technologie web: flask, pyramid, turbogears, django ;</li>
+           <li>LDAP et role base accounting ;</li>
+           <li>utilisation des méthodes agiles ; </li>
+           <li>zero mq pour utilisation dans un système distribué ; </li>
+           <li>packaging d'applications centOS, et python (distutils) ;</li>
+           <li>documentation d'architecture conformément à ISO2700X (risk
+           assessment, access control...).</li>
        </ul>
 
         <table>
@@ -168,14 +169,15 @@
    </div>
 
        <div  class="content step"   data-scale=1 data-x="000" data-y="2000"  >
-       <h1 class=intitule><b>2011</b> MassMotionMedia Publicité en ligne en format Riche</h1>
+       <h1 class=intitule><b>2011</b> MassMotionMedia Publicité en ligne en
+           format riche</h1>
        <p>
        En tant que développeur senior, j'ai participé à l'élaboration de différents
        produits basés sur des technologies python :
        </p>
        <ul>
-           <li>une solution de Web vidéo multi CDN;</li>
-           <li>un proxy modifiant pour insérer dynamiquement des annonces sur des sites;</li>
+           <li>une solution de Web vidéo multi CDN ;</li>
+           <li>un proxy modifiant pour insérer dynamiquement des annonces sur des sites ;</li>
        </ul>
 
         <table>
@@ -200,26 +202,25 @@
                 Fonctionnel
               </td>
               <td class=is >
-                Assurance Qualité, gestion de projet, développement, documentation
+                Assurance qualité, gestion de projet, développement, documentation
               </td>
            <tr >
               <td class=field >
                 Outil et logiciels
               </td>
               <td class=is >
-                nginx, mercurial, Chiliproject (aka redmine), postgresql, SqlSoup,
+                nginx, mercurial, Chiliproject (aka redmine), postgresql, 
                 turbogears, pyquery, jquery, slqsoup
               </td>
            </tr>
        </table>
    </div>
    <div  class="step  content " data-scale=.9 data-x="1000" data-y="2000"   >
-       <h1 class=intitule>2010 Cellfish Media</h1>
+       <h1 class=intitule><b>2010</b> Cellfish Media</h1>
        <p>
-       Lead Développeur sur la partie facturation du paiement mobile en ligne 
-       en collaboration avec les TelCo. La
-       mission consitait à développer, suivre les chantiers,
-       encadrer les nouveaux arrivants. 
+       Lead développeur sur la partie facturation du paiement mobile en ligne 
+       en collaboration avec les TelCo. La mission consistait à développer, 
+       suivre les chantiers et encadrer les nouveaux arrivants. 
        </p>
        <table >
            <tr >
@@ -243,7 +244,7 @@
                 Fonctionnel
               </td>
               <td class=is >
-                Assurance Qualité, développement, gestion de ticket, suivi de projet, gestion du changement des sources
+                Assurance qualité, développement, gestion de ticket, suivi de projet, gestion du changement des sources
               </td>
           </tr>
            <tr >
@@ -261,10 +262,10 @@
 
    <h1 class=intitule>2005 - 2010 Freelance</h1>
    <p>
-   5 années de missions courtes à fortes valeurs ajoutées, et intenses. 
+   5 années de missions courtes à fortes valeur ajoutée, et intenses. 
    <br/>
-   Les TelCo et ainsi que les web agency ont été mes grandes expériences.
-   J'ai surtout travailler en technologie Web.
+   Les TelCos ainsi que les web agencyies ont été mes grandes expériences.
+   J'ai surtout travaillé en technologie Web.
    </p>
     <table>
        <tr >
@@ -280,7 +281,7 @@
           Client
           </td>
           <td class=is >
-            Agence webs, banques, Telco, divers,
+            Agences web, banques, TelCos, divers,
           </td>
        </tr>
        <tr >
@@ -306,7 +307,7 @@
    </div>
    <div  class="step content" data-scale=.6
    data-x="3000"  data-y="2000" >
-   <h1 class=intitule>2002 - 2005 Telco</h1>
+   <h1 class=intitule>2002 - 2005 TelCos (opérateur TéléComs &amp; réseaux)</h1>
    <p>
    Deux grandes expériences: LDCOM networks, et FTC/orange télévision.<br/>
    Pour LDCOM gestion de la communicaion avec le RIPE pour les allocations d'IPv4, 
@@ -347,8 +348,8 @@
    data-x="3500" data-y="2000" >
    <h1 class=intitule>1999 - 2002 Société de Service en Logiciel Libre </h1>
    <p>
-   Open care, Easter-eggs, Alcôve ont été mes 3 premières société pour lesquelles j'ai travaillé.<br/>
-   Pionnières dans le domaines, elles ont affronté le réalisme nécessaire à la mise eu œuvre du 
+   Open Care, Easter-Eggs, Alcôve ont été les 3 premières sociétés pour lesquelles j'ai travaillé.<br/>
+   Pionnières dans le domaine, elles ont affronté le réalisme nécessaire à la mise eu œuvre du 
    libre dans le monde professionnelle.<br/>
    Plus: le développement d'un driver multi head CL5480 pour linux.
 
@@ -482,7 +483,7 @@ version  interactive
 <div class=coord >Julien Tayon<br/>
 <a class=coord href=mailto:julien@tayon.net >Julien@tayon.net</a><br/>
 <a class=coord href=http://github.com/jul >github.com/jul</a><br/>
-Tel: +33 (0) 7 6886 1982
+Tél: +33 (0) 7 6886 1982
 </div>
 </div>
 
