et une faute d'orthyographe, une

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </td>
            <tr >
               <td class=field >
-                Outil et logiciels
+                Outils et logiciels
               </td>
               <td class=is >
 		Sangles, boîte à outil, scotch, valises, carton, papier, papier bulle.
@@ -109,7 +109,7 @@
               </td>
            <tr >
               <td class=field >
-                Outil et logiciels
+                Outils et logiciels
               </td>
               <td class=is >
                 nginx, mysql, javascript,
@@ -161,7 +161,7 @@
               </td>
            <tr >
               <td class=field >
-                Outil et logiciels
+                Outils et logiciels
               </td>
               <td class=is >
                 nginx, apache, postgresql, django, flask, LDAP, Active Directory,  
@@ -209,7 +209,7 @@
               </td>
            <tr >
               <td class=field >
-                Outil et logiciels
+                Outils et logiciels
               </td>
               <td class=is >
                 nginx, mercurial, Chiliproject (aka redmine), postgresql, 
@@ -252,7 +252,7 @@
           </tr>
            <tr >
               <td class=field >
-                Outil et logiciels
+                Outils et logiciels
               </td>
               <td class=is >
                 Apache, mysql, jira, hudson
@@ -297,7 +297,7 @@
           </td>
        <tr >
           <td class=field >
-            Outil et logiciels
+            Outils et logiciels
           </td>
           <td class=is >
             FreeBSD, Debian, RHEL, svn, cvs, mercurial, matplotlib,
@@ -337,7 +337,7 @@
           </td>
        <tr >
           <td class=field >
-            Outil et logiciels
+            Outils et logiciels
           </td>
           <td class=is >
             Debian, RHEL, svn, cvs, kickstart,
@@ -374,7 +374,7 @@
           </td>
        <tr >
           <td class=field >
-            Outil et logiciels
+            Outils et logiciels
           </td>
           <td class=is >
             Debian, RHEL, Apache, samba, NFS, mysql, postgresql, postfix, NIS, Linux
