maj honnête:wq!

--- a/index.html
+++ b/index.html
@@ -49,6 +49,49 @@
    <div class="step content " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
     </div>
+       <div  class="content step"   data-scale=1.6 data-x="-000" data-y="4000"  >
+       <h1 class=intitule><b>2017</b> Lead Dev dans un établissement de E-learning as a PaaS</h1>
+       <p>
+       "Lead dev" maintenir un "fork" d'un projet de 300k+ sloc et sa maintenance opérationnelle.<br/>
+       Yep, trop heureux de découvrir que mes anciennes compétences de sysadmins que je croyais dépassées
+       sont toujours à la pointe sans mise à jour depuis 8 ans.
+
+       </p>
+        <table>
+           <tr >
+              <td class=field >
+                Technologies
+              </td>
+              <td class=is >
+                    python, infonuagique, openEdx (donc Django (le PHP de python) avec un cancer en phase terminal);
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+	        Fonctionnel
+              </td>
+              <td class=is >
+                    former des padawans, faire le pompier, coder en front, back et diagnostique;
+              </td>
+           <tr >
+              <td class=field >
+                Outils et logiciels
+              </td>
+              <td class=is >
+                  infonuagique napoléonien et sidéral, python, poudre verte, perl de survie, linux moderne, bobologie,
+                  shamanisme, politique dans les limites de mon autisme fonctionnel;
+              </td>
+           </tr>
+           <tr>
+            <td class=field>
+                nouveau défaut acquis
+            </td>
+            <td>
+                incapacité à garder les filtres sociaux, trop fatigué pour mentir.
+            </td>
+           </tr>
+       </table>
+   </div>
        <div  class="content step"   data-scale=1.5 data-x="-000" data-y="5000"  >
        <h1 class=intitule><b>2016</b> Journalier chez ABC Déménagements (Montpellier)</h1>
        <p>
