je déteste quand c'est pas aligné!

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <td class=field>
                 nouveau défaut acquis
             </td>
-            <td>
+            <td class=is>
                 incapacité à garder les filtres sociaux, trop fatigué pour mentir.
             </td>
            </tr>
