--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     data-scale=1 data-x="500" data-y="00" data-rotate=45  >
        <h1 class=big >Objectif</h1>
        <i>
-       Participer à bâtir des produits de qualités accessibles à tous.
+       Participer à bâtir des produits de qualités accessibles à tous.<br/>
+       Sinon conquérir le monde avec ma femme et ma fille quand on aura le temps.
         </i>
 
    </div>
@@ -52,9 +53,7 @@
        <div  class="content step"   data-scale=1.6 data-x="-000" data-y="4000"  >
        <h1 class=intitule><b>2017</b> Lead Dev dans un établissement de E-learning as a PaaS</h1>
        <p>
-       "Lead dev" maintenir un "fork" d'un projet de 300k+ sloc et sa maintenance opérationnelle.<br/>
-       Yep, trop heureux de découvrir que mes anciennes compétences de sysadmins que je croyais dépassées
-       sont toujours à la pointe sans mise à jour depuis 8 ans.
+        <i>Développeur senior</i> dans une entité de télé-enseignement comme un service.<br/>
 
        </p>
         <table>
@@ -63,7 +62,8 @@
                 Technologies
               </td>
               <td class=is >
-                    python, infonuagique, openEdx (donc Django (le PHP de python) avec un cancer en phase terminal);
+                    python, infonuagique souveraine, openEdx (une plate forme de télé-enseignement
+                    modulaire) ;
               </td>
            </tr>
            <tr >
@@ -71,24 +71,16 @@
 	        Fonctionnel
               </td>
               <td class=is >
-                    former des padawans, faire le pompier, coder en front, back et diagnostique;
+                  administration système, documentation technique, développement en avant et front,
+                  validation des factures, support de niveau 3...
               </td>
            <tr >
               <td class=field >
                 Outils et logiciels
               </td>
               <td class=is >
-                  infonuagique napoléonien et sidéral, python, poudre verte, perl de survie, linux moderne, bobologie,
-                  shamanisme, politique dans les limites de mon autisme fonctionnel;
+                  infonuagique souveraine, python, dajngo, openEdx, github, html, css ... 
               </td>
-           </tr>
-           <tr>
-            <td class=field>
-                nouveau défaut acquis
-            </td>
-            <td class=is>
-                incapacité à garder les filtres sociaux, trop fatigué pour mentir.
-            </td>
            </tr>
        </table>
    </div>
