pas oublier sphinx

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 Outils et logiciels
               </td>
               <td class=is >
-                  infonuagique souveraine, python, dajngo, openEdx, github, html, css ... 
+                  infonuagique souveraine, python, dajngo, openEdx, github, html, css, sphinx
+                  chaîne documentaire... 
               </td>
            </tr>
        </table>
