--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
        <h1 class=big >Objectif</h1>
        <i>
        Participer à bâtir des produits de qualités accessibles à tous.<br/>
-       Sinon conquérir le monde avec ma femme et ma fille quand on aura le temps.
         </i>
 
    </div>
@@ -51,7 +50,7 @@
        <h1 class=big >Expériences</h1>
     </div>
        <div  class="content step"   data-scale=1.6 data-x="-000" data-y="4000"  >
-       <h1 class=intitule><b>2017</b> Lead Dev dans un établissement de E-learning as a PaaS</h1>
+       <h1 class=intitule><b>2017</b> Lead Dev dans un établissement de <i>E-learning as a PaaS</i></h1>
        <p>
         <i>Développeur senior</i> dans une entité de télé-enseignement comme un service.<br/>
 
@@ -71,7 +70,7 @@
 	        Fonctionnel
               </td>
               <td class=is >
-                  administration système, documentation technique, développement en avant et front,
+                  administration système, documentation technique, développement backend et front,
                   validation des factures, support de niveau 3...
               </td>
            <tr >
@@ -79,7 +78,7 @@
                 Outils et logiciels
               </td>
               <td class=is >
-                  infonuagique souveraine, python, dajngo, openEdx, github, html, css, sphinx
+                  cloudfront, python, mongo, mysql, django, openEdx, github, html, css, sphinx
                   chaîne documentaire... 
               </td>
            </tr>
