--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
