oublie de l'accessibilité. Ce CV est il RGAA?

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </td>
               <td class=is >
                   administration système, documentation technique, développement backend et front,
-                  validation des factures, support de niveau 3...
+                  validation des factures, conformité RGAA/WCAG 2.0 (accessibilité), support de niveau 3...
               </td>
            <tr >
               <td class=field >
