--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body class="impress-not-supported">
 <div class=loading ><img src=img/loading.gif /> </div>
 <div class="fallback-message">
-    <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
-    <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
+        Le CV est en mode dégradé. Pas de soucis, vous n'aurez peut être pas 
+        la présentation, mais vous avez l'essentiel : l'information.
 </div>
 <div id="impress">
     <div id="init" style="line-height:2" class="step" data-scale=3 data-x="2500" data-y="-500" >
@@ -42,13 +42,51 @@
     data-scale=1 data-x="500" data-y="00" data-rotate=45  >
        <h1 class=big >Objectif</h1>
        <i>
-       Participer à bâtir des produits de qualités accessibles à tous.
+           Voir grandir ma fille dans un environnement propice.<br/>
+           Donc, tout sauf Paris ou sa banlieue.
         </i>
 
    </div>
    <div class="step content " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
     </div>
+   <div  class="content step"   data-scale=1.5 data-x="-000" data-y="6000"  >
+       <h1 class=intitule><b>2017</b> Senior Développeur GIP FUN Mooc (Paris)</h1>
+
+       <p>
+            Maintenance corrective et évolutionnelle sur basé sur une solution de MOOC open source (openEDX) dans le respect des normes d'accessibilité (AGRR). 
+            Interim de la direction technique pour cause de turn-over. Et mise 
+            en place d'un référentiel documentaire technique.
+       </p>
+        <table>
+            <tr>
+                <td class=field >
+                    Technologies
+                  </td>
+                  <td>
+                     openstack souverain (cloudwatt), développement web front et back
+                  </td>
+               </tr>
+               <tr >
+                  <td class=field >
+                    Fonctionnel
+                  </td>
+                  <td class=is >
+                        QA, opération, encadrement des prestations fournisseurs,
+                        audit des factures, code, conseil
+                  </td>
+              </tr>
+               <tr >
+                  <td class=field >
+                    Outils et logiciels
+                  </td>
+                  <td class=is >
+                        openEdx, Django, git, python, javsacript, mysql, mongoDB,
+                        openstack, vagrant, ansible, html, css.
+                  </td>
+               </tr>
+           </table>
+       </div>
        <div  class="content step"   data-scale=1.5 data-x="-000" data-y="5000"  >
        <h1 class=intitule><b>2016</b> Journalier chez ABC Déménagements (Montpellier)</h1>
        <p>
@@ -395,7 +433,7 @@
         sur pypi</a> installables avec <i>pip</i>
     
     </div>
-    
+ 
    <div id=portfolio class="step" data-scale=10 data-x="1000" data-y="-2000" 
   data-rotate=-45 >
        <h1 class=big >Projets fun</h1>
@@ -410,13 +448,6 @@
   data-rotate=-45 >
       <a href=http://beauty-of-imagination.blogspot.fr/2012/06/color-of-music-why-not-discover-pythons.html >Spectrosonogramme avec matplotlib</a><br/>
       <img  src=img/sono.png  />
-    </div>
-   <div class="step boxed" data-scale=2 data-x="5500" data-y="-2000" 
-  data-rotate=-30 >
-      <a href=http://wwwstat.julbox.fr >Fréquentation de site web</a><br/>
-      <br/>
-      utilise <a href=https://github.com/jul/yahi>yahi</a> et flask<br/>
-      <img src=img/wwwstat.png width=900px />
     </div>
    <div class="step " data-scale=2 data-x="5500" data-y="1000" 
   data-rotate=0 >
