Donc les recruteurs tiquent sur mon expérience de déménageur ?
C'est un métier qui m'a appris beaucoup, jamais je ne le retirerais de
mon CV. Je veux être tri classé dev/sysadmin/déménageur

--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
    <div  class="content step"   data-scale=1.5 data-x="-000" data-y="5000"  >
        <h1 class=intitule><b>2016</b> Journalier chez ABC Déménagements (Montpellier)</h1>
        <p>
-	Bin packing and manipulations de solides lourds appliqués à l'optimisation des flux de biens. Bref, déménageur et conducteur. 
+	    Quand la vie vous donne des citrons, vous en faites de la limonade. <br/>
+        J'apprécie le travail en équipe la solidarité, l'importance d'une communication simple et efficace,
+        l'adaptation la propreté et il est en mode projet.<br/>
+        L'expression <i>il faut que ça déménage</i> a un sens.<br/>
+        Celui qui veut commander doit apprendre à obéir, et s'intégrer à tous types d'interlocuteurs
+        (clients et collègues).<br/>
+        Je suis fier de cette expérience à titre personnel et elle m'a fait grandir.
        </p>
         <table>
            <tr >
@@ -106,14 +112,14 @@
 	        Fonctionnel
               </td>
               <td class=is >
-                Communication, et pas casser ;
+                Communication, soin, astuce ;
               </td>
            <tr >
               <td class=field >
                 Outils et logiciels
               </td>
               <td class=is >
-		Sangles, boîte à outil, scotch, valises, carton, papier, papier bulle.
+		Sangles, boîte à outil, scotch, valises, carton, papier, papier bulle...
               </td>
            </tr>
        </table>
