--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
        <p>
 	    Quand la vie vous donne des citrons, vous en faites de la limonade. <br/>
         J'apprécie le travail en équipe la solidarité, l'importance d'une communication simple et efficace,
-        l'adaptation la propreté et il est en mode projet.<br/>
+        l'adaptation, la propreté. C'est un métier en mode projet où l'on prend le pli de toujours livrer.<br/>
         L'expression <i>il faut que ça déménage</i> a un sens.<br/>
         Celui qui veut commander doit apprendre à obéir, et s'intégrer à tous types d'interlocuteurs
         (clients et collègues).<br/>
