--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     Contient les sources de mes projets en python et javascript
     </li>
 <li>
-    <a href="http://pypi.python.org/pypi?%3Aaction=search&term=julien+tayon&submit=search">Mes paquets sur pypi</a><br/>
+    <a href="https://pypi.org/user/julien.tayon/">Mes paquets sur pypi</a><br/>
     Paquets maintenus et packagés sur pypi
     </li>
     <li>
