--- a/index.html
+++ b/index.html
@@ -42,18 +42,49 @@
     data-scale=1 data-x="500" data-y="00" data-rotate=45  >
        <h1 class=big >Objectif</h1>
        <i>
-           Voir grandir ma fille dans un environnement propice.<br/>
-           Donc, tout sauf Paris ou sa banlieue.
+            Jack of all trades, master of none, but oftentimes better than a master of one. <br/>
+           
         </i>
 
    </div>
    <div class="step content " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
     </div>
+   <div  class="content step"   data-scale=1.6 data-x="-000" data-y="3000"  >
+       <h1 class=intitule><b>2018</b> Développeur senior logilab</h1>
+       <p>
+       Sysadmin linux/Développeur python. Environnement intéressant par sa diversité, et prompt à déclencher une fatigue à courir dans tout les sens.
+
+       </p>
+        <table>
+           <tr >
+              <td class=field >
+                Technologies
+              </td>
+              <td class=is >
+                    python, linux, LVM, virtualisation
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+	        Fonctionnel
+              </td>
+              <td class=is >
+                  Administration système, documentation technique, développement backend et front, architecture logicielle.
+              </td>
+           <tr >
+              <td class=field >
+                Outils et logiciels
+              </td>
+              <td class=is >
+                  python, linux, postgresql, gitlab, mercurial, html, css, docker, let's encrypt, lemur (PKI), keycloack (oauth2), phabricator, openstack, qemu, openLDAP, wireguard VPN, unbound DNS, kerberos.
+              </td>
+           </tr>
+       </table>
+   </div>
    <div  class="content step"   data-scale=1.6 data-x="-000" data-y="4000"  >
        <h1 class=intitule><b>2017</b> Développeur senior à GIP Fun Mooc</h1>
        <p>
-       sso
        Maintenance corrective et évolutionnelle sur basé sur une solution de MOOC open source (openEDX) dans le respect des normes d'accessibilité.<br/>
        Analyse, opération et diagnostic de plateforme.
        Interim de la direction technique pour cause de turn-over. Et mise en place d'un référentiel documentaire technique. 
