--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 </head>
 
-<body class="impress-not-supported">
+<body style="display:none" class="impress-not-supported">
 <div class=loading ><img src=img/loading.gif /> </div>
 <div class="fallback-message">
         Le CV est en mode dégradé. Pas de soucis, vous n'aurez peut être pas 
@@ -77,7 +77,7 @@
                 Outils et logiciels
               </td>
               <td class=is >
-                  python, linux, postgresql, gitlab, mercurial, html, css, docker, let's encrypt, lemur (PKI), keycloack (oauth2), phabricator, openstack, qemu, openLDAP, wireguard VPN, unbound DNS, kerberos.
+                  python, linux, postgresql, gitlab, mercurial, html, css, docker, let's encrypt, lemur (PKI), keycloack (oauth2), phabricator, openstack, qemu (KVM), openLDAP, wireguard VPN, unbound DNS, kerberos.
               </td>
            </tr>
        </table>
