adding some skills

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 </head>
 
-<body style="display:none" class="impress-not-supported">
-<div class=loading ><img src=img/loading.gif /> </div>
+<body class="impress-not-supported">
+<div  class=loading ><img src=img/loading.gif /> </div>
 <div class="fallback-message">
         Le CV est en mode dégradé. Pas de soucis, vous n'aurez peut être pas 
         la présentation, mais vous avez l'essentiel : l'information.
@@ -62,7 +62,7 @@
                 Technologies
               </td>
               <td class=is >
-                    python, linux, LVM, virtualisation
+                    python, linux, LVM, virtualisation, VPN, PKI, oauth, SSO
               </td>
            </tr>
            <tr >
