--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
        <p>
        Maintenance corrective et évolutionnelle sur basé sur une solution de MOOC open source (openEDX) dans le respect des normes d'accessibilité.<br/>
        Analyse, opération et diagnostic de plateforme.
-       Interim de la direction technique pour cause de turn-over. Et mise en place d'un référentiel documentaire technique. 
+       Interim de la direction technique pour cause de turn-over. Mise en place d'un référentiel documentaire technique. 
 
        </p>
         <table>
