--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
            </tr>
        </table>
    </div>
-   <div  class="content step"   data-scale=1.2 data-x="-000" data-y="4000"  >
+   <div  class="content step"   data-scale=1.2 data-x="-1000" data-y="4000"  >
        <h1 class=intitule><b>2013/2015</b> Ubity (Montréal)</h1>
        <p>
         Analyse et développement orienté web pour les parties frontales et métiers d'une solution client de voix sur IP.
@@ -192,11 +192,11 @@
            </tr>
        </table>
    </div>
-   <div  class="content step"   data-scale=1.1 data-x="-000" data-y="3000"  >
+   <div  class="content step"   data-scale=1.1 data-x="-1000" data-y="3000"  >
        <h1 class=intitule><b>2013 /</b> Ubisoft (Montréal)</h1>
        <p>
        En tant que développeur senior, j'ai participé à l'élaboration 
-       d'outils pour le déploiement des mécaniques de jeux en lignes. 
+       d'outils pour le déploiement des mécaniques de jeux en ligne. 
        Produits basés sur des technologies python :
        </p>
        <ul>
