--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	        Fonctionnel
               </td>
               <td class=is >
-                  administration système, documentation technique, développement backend et front,
+                  Administration système, documentation technique, développement backend et front,
                   validation des factures, conformité RGAA/WCAG 2.0 (accessibilité), support de niveau 3...
               </td>
            <tr >
@@ -133,7 +133,7 @@
                 Technologies
               </td>
               <td class=is >
-               	Cerveau et muscles (surtout les doigts et les jambes)
+               	Cerveau et muscles
               </td>
            </tr>
            <tr >
