--- a/index.html
+++ b/index.html
@@ -48,8 +48,40 @@
    <div class="step content " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
     </div>
+   <div  class="content step"   data-scale=1.6 data-x="2000" data-y="3000"  >
+       <h1 class=intitule><b>2022</b> Développeur senior Yooz</h1>
+       <p>
+       Developpeur python en environnement de signature électronique et de gestion des factures électroniques.
+
+       </p>
+        <table>
+           <tr >
+              <td class=field >
+                Technologies
+              </td>
+              <td class=is >
+                    python, linux, docker, pytorch, C#, kubernetes
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+	        Fonctionnel
+              </td>
+              <td class=is >
+                  Administration système, développement backend, dockerisation et modularisation des développements.
+              </td>
+           <tr >
+              <td class=field >
+                Outils et logiciels
+              </td>
+              <td class=is >
+                  python, linux, windows, docker.
+              </td>
+           </tr>
+       </table>
+   </div>
    <div  class="content step"   data-scale=1.6 data-x="1000" data-y="3000"  >
-       <h1 class=intitule><b>2018</b> Développeur senior logilab</h1>
+       <h1 class=intitule><b>2018</b> Développeur senior logilab (Toulouse)</h1>
        <p>
        Sysadmin linux/Développeur python. Environnement intéressant par sa diversité, et prompt à déclencher une fatigue à courir dans tout les sens.
 
@@ -81,7 +113,7 @@
        </table>
    </div>
    <div  class="content step"   data-scale=1.6 data-x="1000" data-y="4000"  >
-       <h1 class=intitule><b>2017</b> Développeur senior à GIP Fun Mooc</h1>
+       <h1 class=intitule><b>2017</b> Développeur senior à GIP Fun Mooc (Paris)</h1>
        <p>
        Maintenance corrective et évolutionnelle sur basé sur une solution de MOOC open source (openEDX) dans le respect des normes d'accessibilité.<br/>
        Analyse, opération et diagnostic de plateforme.
