testing git post receive hook

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
-
-
 <html lang="fr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>CV-Julien Tayon</title>
+    <title>CV Julien Tayon</title>
     
     <meta name="description" content="mon Curriculum Vitae en format impress3D" />
     <meta name="author" content="Julien Tayon"/>
