--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    <div  class="content step"   data-scale=1.6 data-x="2000" data-y="3000"  >
        <h1 class=intitule><b>2022</b> Développeur senior Yooz</h1>
        <p>
-       Developpeur python en environnement de signature électronique et de gestion des factures électroniques.
+       Developpeur python en environnement de signature électronique et dématérialisation des factures.
 
        </p>
         <table>
