--- a/world.html
+++ b/world.html
@@ -77,12 +77,15 @@ delete (data[""])
 max = Object.values(data).reduce((a,b) => Math.max(a,b))
 Object.keys(data).forEach( function(k) {
     svgkey = "#" + k.toLowerCase()
+    if (k =="AQ") {
+        svgkey = "#AQ-AU"
+    }
     console.log(svgkey)
     color = "#0000" + ( 256 - Math.ceil( (data[k] / max * 255))).toString(16).padStart(2,"0").toUpperCase();
     console.log(color)
     $(svgkey).attr("fill",color) 
     $(svgkey).on("mouseenter",
-    (e) => { console.log("her" + k); $(".hover").show(); $(".hover").html(( k == "AQ" ? "private" : k ) + ":" + data[k] ) }).on("mouseleave",
+    (e) => { console.log("her" + k); $(".hover").show(); $(".hover").html(( k == "AQ" ? "private address" : k ) + ":" + data[k] ) }).on("mouseleave",
 
     (e) => { $(".hover").hide() })
 })
