putting the ref of the map to find it back

--- a/world.html
+++ b/world.html
@@ -302,4 +302,5 @@ Object.keys(data).forEach( function(k) {
 <div class=hover>
 
 </div>
+<div class=centered >© for map <a href=https://www.amcharts.com/svg-maps/?map=worldWithAntarctica >amcharts CC BY NC 4.0</a></div>
 </body>
