--- a/world.html
+++ b/world.html
@@ -91,21 +91,20 @@ max = Object.values(data).reduce((a,b) => Math.max(a,b))
 $(".max").html(max)
 Object.keys(data).forEach( function(k) {
     svgkey = "#" + k
-    console.log(svgkey)
     grad=( 256- Math.ceil( (data[k] / max * 256) )).toString(16).padStart(2,"0").toUpperCase()
     color = "#" + grad + grad + "FF" ;
-    console.log(color)
     $(svgkey).attr("fill",color) 
     $(svgkey).attr("strike","black") 
     $(svgkey).on("mouseenter",
-    (e) => { console.log("her" + k); $(".hover").show(); $(".hover").html(( k == "AQ" ? "private address" : k ) + ":" + data[k] ) }).on("mouseleave",
-
-    (e) => { $(".hover").hide() })
-})
+        (e) => { 
+            $(".hover").show(); $(".hover").html(( k == "AQ" ? "private address" : k ) + ":" + data[k] ) }
+        ).on("mouseleave", (e) => { $(".hover").hide() })
+    })
 })
 </script>
 </head>
 <body>
+<H1 class=centered >Minimalistic map charts from JSON done in Javascript (see the source)</H1>
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 <svg class=svgcentered version="1.1"
@@ -299,6 +298,7 @@ Object.keys(data).forEach( function(k) {
 0 <div class=gradient ></div><span class=max></span>
 </div>
 <br>
+<div class=centered >© <a href=https://jul.github.io/cv> jtayon</a></div>
 <div class=centered >© for map <a href=https://www.amcharts.com/svg-maps/?map=worldWithAntarctica >amcharts CC BY NC 4.0</a></div>
 <div class=hover>
 
